--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Created by https://www.gitignore.io
+### Jetbrains settings ###
+.idea/
 
 ### OSX ###
 .DS_Store
@@ -7,7 +8,6 @@
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
