--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 astroid==2.0.4
 defusedxml==0.5.0
 diff-match-patch==20181111
+django-cors-headers==2.4.0
 django-import-export==1.1.0
 django==2.1.3
 djangorestframework==3.9.0
